fix(css): Don't wrap plaintext blocks to avoid breaking ascii art

--- a/public/css/irn.css
+++ b/public/css/irn.css
@@ -99,6 +99,12 @@ pre code {
   color: #ddd;
 }
 
+/* Don't wrap plaintext (to avoid breaking ascii art) */
+.language-plaintext pre {
+  white-space: pre;
+  overflow-x: auto;
+}
+
 /* Gist via GitHub Pages */
 .gist .gist-file {
   font-family: Menlo, Monaco, "Courier New", monospace !important;
